# fluxion-nightly

./: .env.example  .gitignore  README-Docker.md  README.md  flake.nix  shell.nix
fluxion-nightly/: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  build.yaml  config.example.toml  config.yaml  flake.nix  repository.json  rust-toolchain.toml
fluxion-nightly/.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md
fluxion-nightly/.github/workflows/: build-addon.yaml
fluxion-nightly/crates/fluxion-adapters/: Cargo.toml
fluxion-nightly/crates/fluxion-adapters/src/: lib.rs
fluxion-nightly/crates/fluxion-adapters/src/ha/: adapters.rs  client.rs  errors.rs  mod.rs  plugin.rs  solar_forecast_fetcher.rs  types.rs
fluxion-nightly/crates/fluxion-adapters/src/solax/: entity_mapper.rs
fluxion-nightly/crates/fluxion-backtest/src/: actual.rs  lib.rs  simulation.rs
fluxion-nightly/crates/fluxion-core/: Cargo.toml
fluxion-nightly/crates/fluxion-core/examples/: strategy_simulator.rs
fluxion-nightly/crates/fluxion-core/src/: async_tasks.rs  config_events.rs  continuous_systems.rs  day_profiling.rs  debug.rs  execution.rs  lib.rs  plugin_adapters.rs  resources.rs  web_bridge.rs
fluxion-nightly/crates/fluxion-core/src/async_systems/: config_handler.rs  health_checker.rs  history_fetcher.rs  inverter_writer.rs  mod.rs  price_fetcher.rs  state_reader.rs
fluxion-nightly/crates/fluxion-core/src/components/: battery_predictor.rs  consumption_history.rs  pv_history.rs
fluxion-nightly/crates/fluxion-core/src/pricing/: mod.rs
fluxion-nightly/crates/fluxion-core/src/scheduling/: mod.rs
fluxion-nightly/crates/fluxion-core/src/strategy/: fixed_price_arbitrage.rs  locking.rs  mod.rs  pricing.rs  seasonal.rs  utils.rs  winter_adaptive.rs  winter_adaptive_v10.rs  winter_adaptive_v2.rs  winter_adaptive_v20.rs  winter_adaptive_v3.rs  winter_adaptive_v4.rs  (+5 more)
fluxion-nightly/crates/fluxion-core/tests/: charging_forward_shift_test.rs  charging_optimization_test.rs  config_updates.rs  strategy_comparison_test.rs  v2_cheapest_blocks_test.rs  v2_deadline_test.rs  v2_debug_test.rs
fluxion-nightly/crates/fluxion-i18n/: Cargo.toml
fluxion-nightly/crates/fluxion-i18n/tests/: translation_tests.rs
fluxion-nightly/crates/fluxion-integration-tests/: Cargo.toml  README.md
fluxion-nightly/crates/fluxion-integration-tests/src/: lib.rs
fluxion-nightly/crates/fluxion-integration-tests/tests/: ha_integration.rs  strategy_comparison.rs
fluxion-nightly/crates/fluxion-main/: Cargo.toml
fluxion-nightly/crates/fluxion-main/src/: config.rs  heartbeat_client.rs  main.rs  systems.rs  version.rs
fluxion-nightly/crates/fluxion-mobile-types/src/: lib.rs
fluxion-nightly/crates/fluxion-plugins/: Cargo.toml
fluxion-nightly/crates/fluxion-plugins/src/: manager.rs
fluxion-nightly/crates/fluxion-server/src/: config.rs  dashboard.rs  db.rs  heartbeat.rs  lib.rs  main.rs  monitor.rs  notifications.rs
fluxion-nightly/crates/fluxion-server/templates/: base.html  dashboard.html
fluxion-nightly/crates/fluxion-server/tests/: integration.rs
fluxion-nightly/crates/fluxion-shared/: Cargo.toml
fluxion-nightly/crates/fluxion-shared/src/: heartbeat.rs  telemetry.rs
fluxion-nightly/crates/fluxion-strategy-simulator/: Cargo.toml
fluxion-nightly/crates/fluxion-strategy-simulator/src/: lib.rs  price_scenarios.rs  simulation_engine.rs  state.rs  strategies.rs  synthetic_data.rs
fluxion-nightly/crates/fluxion-types/src/: config.rs  day_profile.rs  health.rs  history.rs  inverter.rs  lib.rs  pricing.rs  user_control.rs  web.rs
fluxion-nightly/crates/fluxion-web/: Cargo.toml
fluxion-nightly/crates/fluxion-web/src/: backtest.rs  config_api.rs  lib.rs  plugin_api.rs  routes.rs  simulator.rs  user_control_api.rs  validation.rs
fluxion-nightly/crates/solax-csv-importer/src/: verify_prices.rs
fluxion-nightly/docs/guides/: CUSTOM_STRATEGIES.md  DEPLOYMENT.md  I18N.md  WEB_UI_GUIDE.md
fluxion-nightly/fluxion/: CODE_OF_CONDUCT.md  Cargo.toml  Dockerfile  README.md
fluxion-nightly/fluxion-mobile/src/: index.html  main.js
fluxion-nightly/fluxion-mobile/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
fluxion-nightly/fluxion-mobile/src-tauri/src/: commands.rs  credentials.rs  state.rs  tor.rs
fluxion-nightly/fluxion/crates/fluxion-types/: Cargo.toml
fluxion-nightly/fluxion/crates/solax-csv-importer/: Cargo.toml
fluxion-nightly/fluxion/docs/: CONFIG_README.cs.md
fluxion-nightly/fluxion/fluxion/: config.yaml
fluxion/crates/fluxion-backtest/: Cargo.toml
fluxion/crates/fluxion-backtest/src/: db.rs  simulation.rs  types.rs
fluxion/crates/fluxion-core/: Cargo.toml
fluxion/crates/fluxion-core/examples/: download_ote_prices.rs  strategy_simulator.rs
fluxion/crates/fluxion-core/src/: async_runtime.rs  async_systems.rs  async_tasks.rs  continuous_systems.rs  execution.rs  lib.rs  ote_market_data.rs  pricing.rs  resources.rs  scheduling.rs  traits.rs  user_control_persistence.rs  utils.rs  web_bridge.rs
fluxion/crates/fluxion-core/tests/: charging_forward_shift_test.rs  config_updates.rs  v2_deadline_test.rs  v2_debug_test.rs
fluxion/crates/fluxion-ha/: Cargo.toml
fluxion/crates/fluxion-ha/src/: adapters.rs  client.rs  lib.rs  plugin.rs
fluxion/crates/fluxion-integration-tests/: Cargo.toml
fluxion/crates/fluxion-integration-tests/tests/: ha_integration.rs  strategy_comparison.rs
fluxion/crates/fluxion-server/: Cargo.toml  config.example.toml
fluxion/crates/fluxion-server/src/: db.rs  heartbeat.rs
fluxion/crates/fluxion-upgrader/: Cargo.toml
fluxion/crates/fluxion-upgrader/src/: backup.rs  calm.rs  calm_detector.rs  config.rs  downloader.rs  error.rs  lib.rs  main.rs  process.rs  release.rs  release_checker.rs  rollback.rs  state.rs  supervisor.rs  telemetry.rs  upgrader.rs  version.rs
fluxion/crates/fluxion-version/: Cargo.toml
fluxion/crates/fluxion-version/src/: main.rs
fluxion/crates/fluxion-web/: Cargo.toml
fluxion/crates/fluxion-web/src/: chart.rs  config_api.rs  config_ui.rs  lib.rs  routes.rs  user_control_api.rs  validation.rs
(+161 files in other folders)
