[workspace]
members = [
    "crates/fluxion-adapters",
    "crates/fluxion-backtest",
    "crates/fluxion-core",
    "crates/fluxion-i18n",
    "crates/fluxion-mobile-types",
    "crates/fluxion-integration-tests",
    "crates/fluxion-main",
    "crates/fluxion-plugins",
    "crates/fluxion-strategy-simulator",
    "crates/fluxion-types",
    "crates/fluxion-web",
    "crates/fluxion-shared",
    "crates/fluxion-server",
    "crates/solax-csv-importer",
]
resolver = "2"

[workspace.package]
version = "0.2.15"
edition = "2024"
license = "CC-BY-NC-ND-4.0"
repository = "https://github.com/SolarE-cz/fluxion-nightly"

[workspace.lints.rust]
unused_must_use = "deny"
explicit_outlives_requirements = "warn"
macro_use_extern_crate = "warn"
missing_debug_implementations = "warn"
trivial_numeric_casts = "warn"
deprecated = "allow"
unused_crate_dependencies = "allow"

[workspace.lints.rust.future_incompatible]
level = "warn"
priority = -1

[workspace.lints.rust.nonstandard_style]
level = "warn"
priority = -1

[workspace.lints.rust.rust_2018_idioms]
level = "warn"
priority = -1

[workspace.lints.clippy]
doc_markdown = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
needless_continue = "allow"
new_without_default = "allow"
similar_names = "allow"
unreadable_literal = "allow"
allow_attributes = "warn"
get_unwrap = "warn"
integer_division = "warn"
lossy_float_literal = "warn"
modulo_arithmetic = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
str_to_string = "warn"
string_add = "warn"
string_slice = "warn"
implicit_clone = "warn"
unneeded_field_pattern = "warn"
unseparated_literal_suffix = "warn"
wildcard_enum_match_arm = "warn"

[workspace.lints.clippy.pedantic]
level = "warn"
priority = -1

[workspace.dependencies]
bevy_ecs = "0.17.3"
bevy_app = "0.17.3"
bevy_log = "0.17.3"
bevy_utils = "0.17.3"
bevy_tasks = "0.17.3"
anyhow = "1.0.100"
thiserror = "2.0.17"
serde_json = "1.0.145"
axum = "0.8.7"
tower = "0.5.2"
chrono-tz = "0.10.4"
toml = "0.9.8"
tracing = "0.1.41"
prometheus = "0.14.0"
warp = "0.4.2"
parking_lot = "0.12.5"
futures-timer = "3.0.3"
crossbeam-channel = "0.5.15"
async-trait = "0.1.89"
ringbuffer = "0.16.0"
csv = "1.4.0"
askama = "0.14.0"
tokio-stream = "0.1.17"
fluent = "0.17.0"
fluent-bundle = "0.16.0"
unic-langid = "0.9.6"
intl-memoizer = "0.5.3"
mockito = "1.7.0"
tempfile = "3.23.0"
calamine = "0.32.0"

[workspace.dependencies.tokio]
version = "1.48.0"
features = [
    "full",
]

[workspace.dependencies.serde]
version = "1.0.228"
features = [
    "derive",
]

[workspace.dependencies.reqwest]
version = "0.12.24"
default-features = false
features = [
    "json",
    "rustls-tls",
]

[workspace.dependencies.tower-http]
version = "0.6.6"
features = [
    "cors",
    "fs",
]

[workspace.dependencies.clap]
version = "4"
features = [
    "derive",
]

[workspace.dependencies.chrono]
version = "0.4.42"
features = [
    "serde",
]

[workspace.dependencies.tracing-subscriber]
version = "0.3.20"
features = [
    "env-filter",
]

[workspace.dependencies.rusqlite]
version = "0.33.0"
features = [
    "bundled",
    "chrono",
]

[workspace.dependencies.lettre]
version = "0.11"
default-features = false
features = [
    "builder",
    "smtp-transport",
    "tokio1-rustls-tls",
]
