[package]
name = "fluxion-adapters"
version.workspace = true
edition = "2024"

[dependencies]
fluxion-core = { path = "../fluxion-core" }
bevy_ecs.workspace = true
bevy_app.workspace = true
bevy_log.workspace = true
bevy_utils.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
reqwest.workspace = true
tokio.workspace = true
chrono.workspace = true
async-trait.workspace = true
urlencoding = "2.1"

[dev-dependencies]
mockito.workspace = true
