[package]
name = "fluxion-i18n"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
fluent = { workspace = true }
fluent-bundle = { workspace = true }
unic-langid = { workspace = true }
intl-memoizer = { workspace = true }
thiserror = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
