[package]
name = "fluxion-integration-tests"
version.workspace = true
edition = "2024"
publish = false

[dependencies]
fluxion-core = { path = "../fluxion-core" }
fluxion-adapters = { path = "../fluxion-adapters" }
fluxion-types = { path = "../fluxion-types" }
tokio = { workspace = true, features = ["full"] }
reqwest = { version = "0.11", default-features = false, features = [
  "json",
  "blocking",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.33.0", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
csv = "1.3"

[lib]
# This is just a test crate, no library
path = "src/lib.rs"

[[test]]
name = "ha_integration"
path = "tests/ha_integration.rs"
