[package]
name = "fluxion-main"
version.workspace = true
edition = "2024"

[[bin]]
name = "fluxion"
path = "src/main.rs"

[[bin]]
name = "fluxion-version"
path = "src/bin/version.rs"

[features]
# Forward the modbus feature to fluxion-core when enabled
default = []

[dependencies]
# Local dependencies
fluxion-core = { path = "../fluxion-core" }
fluxion-shared = { path = "../fluxion-shared" }
fluxion-i18n = { path = "../fluxion-i18n" }
fluxion-adapters = { path = "../fluxion-adapters" }
fluxion-web = { path = "../fluxion-web" }

# Workspace dependencies
bevy_ecs.workspace = true
bevy_app.workspace = true
bevy_log.workspace = true
bevy_utils.workspace = true
bevy_tasks.workspace = true
tokio.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
prometheus.workspace = true
warp.workspace = true
parking_lot.workspace = true
reqwest.workspace = true

[dev-dependencies]
tempfile.workspace = true
