[package]
name = "fluxion-plugins"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Plugin system for Fluxion battery optimization strategies"

[lints]
workspace = true

[dependencies]
fluxion-types = { path = "../fluxion-types" }

# Serialization
serde.workspace = true
serde_json.workspace = true

# Time handling
chrono.workspace = true

# Async
tokio.workspace = true
async-trait.workspace = true

# HTTP client for external plugins
reqwest = { workspace = true, features = ["blocking", "json"] }

# Logging
tracing.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true
