[package]
name = "fluxion-strategy-simulator"
version.workspace = true
edition = "2024"
description = "Strategy efficiency test suite for FluxION"

[[bin]]
name = "fluxion-sim"
path = "src/bin/sim.rs"

[dependencies]
# Local dependencies
fluxion-types = { path = "../fluxion-types" }
fluxion-core = { path = "../fluxion-core" }

# Workspace dependencies
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tokio.workspace = true

# Additional dependencies
uuid = { version = "1.0", features = ["v4", "serde"] }
rand = "0.8"

# CLI dependencies
clap = { workspace = true, features = ["derive"] }
comfy-table = "7.0"
rusqlite = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
