[package]
name = "fluxion-web"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
fluxion-backtest = { path = "../fluxion-backtest" }
fluxion-core = { path = "../fluxion-core" }
fluxion-i18n = { path = "../fluxion-i18n" }
fluxion-types = { path = "../fluxion-types" }
axum.workspace = true
askama.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
tracing.workspace = true
parking_lot.workspace = true
plotters.workspace = true

[lints]
workspace = true
