[package]
name = "fluxion-web"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
fluxion-backtest = { path = "../fluxion-backtest" }
fluxion-core = { path = "../fluxion-core" }
fluxion-i18n = { path = "../fluxion-i18n" }
fluxion-plugins = { path = "../fluxion-plugins" }
fluxion-strategy-simulator = { path = "../fluxion-strategy-simulator" }
fluxion-types = { path = "../fluxion-types" }
fluxion-mobile-types = { path = "../fluxion-mobile-types" }
uuid = { version = "1.0", features = ["v4", "serde"] }
x25519-dalek = { version = "2", features = ["static_secrets"] }
base32 = "0.5"
rand_core = { version = "0.6", features = ["getrandom"] }
base64 = "0.22"
qrcode = { version = "0.14", default-features = false, features = ["svg"] }
nix = { version = "0.30", features = ["signal"] }
axum.workspace = true
askama.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
tracing.workspace = true
parking_lot.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
