[package]
name = "fluxion-mobile"
version = "0.1.0"
edition = "2021"
description = "FluxION mobile app — remote monitoring and control over Tor"
license = "CC-BY-NC-ND-4.0"

[lib]
name = "fluxion_mobile_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-barcode-scanner = "2"
tauri-plugin-store = "2"
tauri-plugin-os = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["rt", "macros", "time", "sync"] }
tracing = "0.1"

# Arti — Rust Tor client
arti-client = { version = "0.38", default-features = false, features = [
  "tokio",
  "rustls",
  "onion-service-client",
] }
tor-rtcompat = { version = "0.38", default-features = false, features = [
  "tokio",
  "rustls",
] }

# HTTP/1.1 client over Tor DataStream
hyper = { version = "1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"

# Force bundled sqlite3 — required for Android cross-compilation
# (system libsqlite3 is x86_64, incompatible with aarch64-android target)
libsqlite3-sys = { version = "0.35", features = ["bundled"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
