[package]
name = "fluxion-backtest"
version.workspace = true
edition = "2024"

[dependencies]
# Workspace dependencies
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
async-trait.workspace = true
tracing.workspace = true
rusqlite.workspace = true

# Local dependencies
fluxion-types = { path = "../fluxion-types" }
fluxion-core = { path = "../fluxion-core" }

[lints]
workspace = true
