[package]
name = "fluxion-core"
version.workspace = true
edition = "2024"

[features]
# Do not enable Modbus by default; opt-in via `--features modbus`
default = []

[dependencies]
# Local dependencies
fluxion-i18n = { path = "../fluxion-i18n" }

# Core dependencies only - no inverter-specific or runtime dependencies
bevy_ecs.workspace = true
bevy_app.workspace = true
bevy_log.workspace = true
bevy_utils.workspace = true
bevy_tasks.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
tracing.workspace = true
tokio.workspace = true
anyhow.workspace = true
async-trait.workspace = true
crossbeam-channel.workspace = true
ringbuffer.workspace = true
csv.workspace = true
axum.workspace = true
tower-http.workspace = true
parking_lot.workspace = true
futures-timer.workspace = true
fluent.workspace = true
reqwest = { version = "0.11", default-features = false, features = [
  "blocking",
  "json",
  "rustls-tls",
] }
calamine = "0.24"

[dev-dependencies]
tracing-subscriber = "0.3"
