[package]
name = "fluxion-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "fluxion-server"
path = "src/main.rs"

[dependencies]
fluxion-shared = { path = "../fluxion-shared" }
axum.workspace = true
tokio.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rusqlite.workspace = true
askama.workspace = true
lettre.workspace = true
tower-http.workspace = true

[dev-dependencies]
reqwest.workspace = true
tokio.workspace = true
serde_json.workspace = true

[lints]
workspace = true
