# SPDX-FileCopyrightText: © 2025 Daniel Havlicek <daniel@solare.cz>
# SPDX-License-Identifier: CC-BY-NC-ND-4.0

[package]
name = "fluxion-version"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Tiny binary that outputs the FluxION workspace version"

[[bin]]
name = "fluxion-version"
path = "src/main.rs"

[lints]
workspace = true
