[package]
name = "solax-csv-importer"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[[bin]]
name = "solax-csv-importer"
path = "src/main.rs"

[[bin]]
name = "ote-price-importer"
path = "src/ote_importer.rs"

[[bin]]
name = "verify-prices"
path = "src/verify_prices.rs"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
csv.workspace = true
rusqlite = { workspace = true }
clap.workspace = true
fluxion-core = { path = "../fluxion-core" }
tracing.workspace = true
tracing-subscriber.workspace = true
